--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                             <div class="f-feature-card-outlined" style="height: fit-content;">
                                 <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/gal.jpeg" class="image-50 caoching">
                                 <div class="f-margin-bottom-76">
-                                    <p class="f-paragraph-large-5 company-position d-none">ceo</p>
+                                    <p class="f-paragraph-large-5 company-position">Autobroker</p>
                                     <h5 class="f-h5-heading-5 text-center">Gal Resnik</h5>
                                 </div>
                                 <p class="f-paragraph-large-5">“Win association predstavlja odlično skupino mladih podjetnih posameznikov in je odlična izhodiščna točka za pogovore o velikih idejah.“</p>
