--- a/index.html
+++ b/index.html
@@ -781,6 +781,17 @@
             <div class="container-3"></div>
         </div>
 
+        <div class="container">
+            <div class="row">
+                <a id="prijava-button" target="_blank" href="https://www.google.com/url?q=https://www.google.com/url?q%3Dhttps://docs.google.com/forms/d/1WD-R9OyNUdA2MxHxhzDgfiI258CJXPOGZYZWAO6okWM/edit%26amp;sa%3DD%26amp;source%3Deditors%26amp;ust%3D1698604845924113%26amp;usg%3DAOvVaw3qJmFoBTLtSoQ3FeCR0Oen&sa=D&source=docs&ust=1698604845945098&usg=AOvVaw0R7L71ErLXGL73BuY2Kjem" data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
+                    <strong class="bold-text-18">Prijavi se na čakalno listo</strong>
+                </a>
+            </div>
+        </div>
+        
+
+
+
         <!-- FAQ -->
         <div class="cloneable-container-default">
             <div class="wrapper-2 opportunities">
