--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <meta property="og:title" content="WIN association" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://win-association.com/" />
+        <meta property="og:url" content="https://win-association.com/index.html" />
         <meta property="og:image" content="/images/banner.webp" />
         <meta property="og:image:type" content="image/webp" />
         <meta property="og:image:width" content="1000" />
@@ -125,7 +125,7 @@
                 <img src="images/banner.webp" style="border-radius:20px;">
                 <div class="hero-image-wrapper"></div>
             </div>
-            <a href="#prijava-button" data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
+            <a target="_blank" href="prijava.html" data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
                 <strong class="bold-text-18">Prijavi se na čakalno listo</strong>
             </a>
             <div class="profile-images-wrapper">
@@ -537,7 +537,9 @@
                 </p>
                 <input type="text" class="d-none" placeholder="Vpišite email" class="input-mail">
                 <textarea rows="5" class="d-none" placeholder="Na kratko napišite o sebi." style="height: auto;" class="input-mail"></textarea>
-                <a id="prijava-button" target="_blank" href="https://www.google.com/url?q=https://www.google.com/url?q%3Dhttps://docs.google.com/forms/d/1WD-R9OyNUdA2MxHxhzDgfiI258CJXPOGZYZWAO6okWM/edit%26amp;sa%3DD%26amp;source%3Deditors%26amp;ust%3D1698604845924113%26amp;usg%3DAOvVaw3qJmFoBTLtSoQ3FeCR0Oen&sa=D&source=docs&ust=1698604845945098&usg=AOvVaw0R7L71ErLXGL73BuY2Kjem" data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
+                <a id="prijava-button" target="_blank" 
+                    href="prijava.html"
+                    data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
                     <strong class="bold-text-18">Prijavi se na čakalno listo</strong>
                 </a>
             </div>
@@ -783,13 +785,14 @@
 
         <div class="container">
             <div class="row">
-                <a id="prijava-button" target="_blank" href="https://www.google.com/url?q=https://www.google.com/url?q%3Dhttps://docs.google.com/forms/d/1WD-R9OyNUdA2MxHxhzDgfiI258CJXPOGZYZWAO6okWM/edit%26amp;sa%3DD%26amp;source%3Deditors%26amp;ust%3D1698604845924113%26amp;usg%3DAOvVaw3qJmFoBTLtSoQ3FeCR0Oen&sa=D&source=docs&ust=1698604845945098&usg=AOvVaw0R7L71ErLXGL73BuY2Kjem" data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
+                <a id="prijava-button" target="_blank" 
+                    href="prijava.html"
+                    target="_blank"
+                    data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
                     <strong class="bold-text-18">Prijavi se na čakalno listo</strong>
                 </a>
             </div>
         </div>
-        
-
 
 
         <!-- FAQ -->
