--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
         <div class="container-3"></div>
     </div>
 
-    <div class="container">
+    <div class="container d-flex" style="justify-content: center;">
         <div class="row">
             <a id="prijava-button" target="_blank" href="prijava.html" target="_blank"
                 data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
