--- a/index.html
+++ b/index.html
@@ -781,9 +781,7 @@
 
                         <!-- Jaka Berdnik -->
                         <div class="f-feature-card-outlined" style="height: fit-content;">
-                            <img loading="lazy" style="border-radius: 50%;" width="150"
-                                src="https://media.licdn.com/dms/image/D4D03AQF-4l2Wv2SQmQ/profile-displayphoto-shrink_800_800/0/1683045294580?e=1704326400&v=beta&t=0VXGtljtsMZsm2qaz0QKyCfGvbq3jAttAF96bdAaBo8"
-                                class="image-50 caoching">
+                            <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/Jaka Berdnik.webp" class="image-50 caoching">
                             <div class="f-margin-bottom-76">
                                 <p class="f-paragraph-large-5 company-position">Strokovnjak za B2B Prodajo in Marketing
                                 </p>
@@ -959,7 +957,7 @@
                         <!-- TIMOTEJ -->
                         <div class="f-feature-card-outlined">
                             <img loading="lazy" width="150" sizes="(max-width: 479px) 100vw, 306px" alt=""
-                                srcset="images/Frame-48095556-p-500.png 500w, images//members/timotej.webp 595w"
+                                srcset="images/Frame-48095556-p-500.png 500w, images//members/timotej-new.webp 595w"
                                 class="image-50 caoching">
                             <div class="f-margin-bottom-76">
                                 <h5 class="f-h5-heading-5">Timotej B.</h5>
