update form link

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <img src="images/banner.webp" style="border-radius:20px;">
             <div class="hero-image-wrapper"></div>
         </div>
-        <a target="_blank" href="prijava.html" data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58"
+        <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_oV8CD4x29Jq1aMklsG_rAkcqUnFKXB770ytQ94KtJUS1kQ/viewform?usp=sf_link" data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58"
             class="button-join w-button">
             <strong class="bold-text-18">Prijavi se na čakalno listo</strong>
         </a>
@@ -1005,7 +1005,7 @@
 
     <div class="container d-flex" style="justify-content: center;">
         <div class="row">
-            <a id="prijava-button" target="_blank" href="prijava.html" target="_blank"
+            <a id="prijava-button" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf_oV8CD4x29Jq1aMklsG_rAkcqUnFKXB770ytQ94KtJUS1kQ/viewform?usp=sf_link" target="_blank"
                 data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
                 <strong class="bold-text-18">Prijavi se na čakalno listo</strong>
             </a>
