--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                         <div class="f-feature-card-outlined" style="height: fit-content;">
                             <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/jure.jpeg" class="image-50 caoching">
                             
-                            <div class="f-margin-bottom-76">
+                            <div >
                                 <h5 class="f-h5-heading-5 text-center">Jure Laharnar</h5>
                                 <p class="f-paragraph-large-5 company-position">Podcast host & marketing specialist</p>
                                 <!-- LINKS -->
@@ -795,10 +795,19 @@
                         <div class="f-feature-card-outlined" style="height: fit-content;">
                             <img loading="lazy" style="border-radius: 50%;" width="150"
                                 src="images/guests/Jaka Berdnik.webp" class="image-50 caoching">
+
                             <div class="f-margin-bottom-76">
                                 <h5 class="f-h5-heading-5 text-center">Jaka Berdnik</h5>
                                 <p class="f-paragraph-large-5 company-position">Strokovnjak za B2B Prodajo in Marketing</p>
-                                
+                                <!-- LINKS -->
+                                <div class="testimonial-links-container">
+                                    <a href="https://www.linkedin.com/in/jakaberdnik/" target="_blank">
+                                        <img class="linkedin-icon" src="images/icons/linkedin.png">
+                                    </a>
+                                    <a href="https://www.jakaberdnik.com/" target="_blank">
+                                        <img class="website-icon" src="images/icons/website.png" >
+                                    </a>
+                                </div>
                             </div>
                             <p class="f-paragraph-large-5">"Če želiš doseči velike stvari, rešuj velike probleme. To pa
                                 lahko narediš samo tako, da se povežeš z izjemnimi ljudmi. <br>
@@ -819,8 +828,13 @@
                                 class="image-50 caoching">
                             <div class="f-margin-bottom-76">
                                 <h5 class="f-h5-heading-5 text-center">Blaž Zupan</h5>
-                                <p class="f-paragraph-large-5 company-position">Serijski podjetnik, profesor, mentor in
-                                    investitor</p>
+                                <p class="f-paragraph-large-5 company-position">Serijski podjetnik, profesor, mentor in investitor</p>
+                                <!-- LINKS -->
+                                <div class="testimonial-links-container">
+                                    <a href="https://www.linkedin.com/in/zupanb/" target="_blank">
+                                        <img class="linkedin-icon" src="images/icons/linkedin.png">
+                                    </a>
+                                </div>
                             </div>
                             <p class="f-paragraph-large-5">"Bil sem presenečen nad stopnjo angažiranosti in radovednosti
                                 članov, ki so pokazali resničen interes za teme, o katerih smo se pogovarjali. To je
@@ -847,6 +861,15 @@
                             <div class="f-margin-bottom-76">
                                 <h5 class="f-h5-heading-5 text-center">Andraž Kališnik</h5>
                                 <p class="f-paragraph-large-5 company-position">Finančni svetovalec in naložbeni analitik</p>
+                                <!-- LINKS -->
+                                <div class="testimonial-links-container">
+                                    <a href="https://www.linkedin.com/in/andraž-kališnik/" target="_blank">
+                                        <img class="linkedin-icon" src="images/icons/linkedin.png">
+                                    </a>
+                                    <a href="https://andrazkalisnik.com/" target="_blank">
+                                        <img class="website-icon" src="images/icons/website.png" >
+                                    </a>
+                                </div>
                             </div>
                             <p class="f-paragraph-large-5">"Nisem še doživel od skupine, ki sem jo prvič spoznal, da me je tako dobro sprejela in da je debata takoj stekla. Prav neverjetno.
                                 Res mi je všeč kako ste odprti za novo znanje, kako vas ni strah stopiti ven, izkoristiti vsak trenutek za novo znanje in vprašanja. Energije pa ne morem opisati z besedami. Ampak ta energija je dala prostoru toplino in varnost, da sem z vami lahko delil vse znanje o investiranju in zavarovanjih (nisem si mislil, da vas bo to zanimalo, ampak super, da vas), ki sem jih pridobival tekom 12 let.
@@ -854,14 +877,22 @@
                             </p>
                         </div>
 
-
                         <!-- Gal Resnik -->
                         <div class="f-feature-card-outlined" style="height: fit-content;">
                             <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/gal.jpeg"
                                 class="image-50 caoching">
                             <div class="f-margin-bottom-76">
-                                <p class="f-paragraph-large-5 company-position">Autobroker</p>
                                 <h5 class="f-h5-heading-5 text-center">Gal Resnik</h5>
+                                <p class="f-paragraph-large-5 company-position">Autobroker</p>
+                                <!-- LINKS -->
+                                <div class="testimonial-links-container">
+                                    <a href="https://www.linkedin.com/in/gal-resnik-poljašević-8b48301b3" target="_blank">
+                                        <img class="linkedin-icon" src="images/icons/linkedin.png">
+                                    </a>
+                                    <a href="https://bizicoin.si/" target="_blank">
+                                        <img class="website-icon" src="images/icons/website.png" >
+                                    </a>
+                                </div>
                             </div>
                             <p class="f-paragraph-large-5">“Win association predstavlja odlično skupino mladih podjetnih
                                 posameznikov in je odlična izhodiščna točka za pogovore o velikih idejah.“</p>
