--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                             <img loading="lazy" style="border-radius: 50%;" width="150"
                                 src="images/guests/Jaka Berdnik.webp" class="image-50 caoching">
 
-                            <div class="f-margin-bottom-76">
+                            <div>
                                 <h5 class="f-h5-heading-5 text-center">Jaka Berdnik</h5>
                                 <p class="f-paragraph-large-5 company-position">Strokovnjak za B2B Prodajo in Marketing</p>
                                 <!-- LINKS -->
@@ -826,7 +826,7 @@
                         <div class="f-feature-card-outlined" style="height: fit-content;">
                             <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/blaz.jpeg"
                                 class="image-50 caoching">
-                            <div class="f-margin-bottom-76">
+                            <div>
                                 <h5 class="f-h5-heading-5 text-center">Blaž Zupan</h5>
                                 <p class="f-paragraph-large-5 company-position">Serijski podjetnik, profesor, mentor in investitor</p>
                                 <!-- LINKS -->
@@ -858,7 +858,7 @@
                         <div class="f-feature-card-outlined" style="height: fit-content;">
                             <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/andraz.webp"
                                 class="image-50 caoching">
-                            <div class="f-margin-bottom-76">
+                            <div>
                                 <h5 class="f-h5-heading-5 text-center">Andraž Kališnik</h5>
                                 <p class="f-paragraph-large-5 company-position">Finančni svetovalec in naložbeni analitik</p>
                                 <!-- LINKS -->
@@ -881,7 +881,7 @@
                         <div class="f-feature-card-outlined" style="height: fit-content;">
                             <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/gal.jpeg"
                                 class="image-50 caoching">
-                            <div class="f-margin-bottom-76">
+                            <div>
                                 <h5 class="f-h5-heading-5 text-center">Gal Resnik</h5>
                                 <p class="f-paragraph-large-5 company-position">Autobroker</p>
                                 <!-- LINKS -->
@@ -889,7 +889,7 @@
                                     <a href="https://www.linkedin.com/in/gal-resnik-poljašević-8b48301b3" target="_blank">
                                         <img class="linkedin-icon" src="images/icons/linkedin.png">
                                     </a>
-                                    <a href="https://bizicoin.si/" target="_blank">
+                                    <a href="https://autobroker.si/" target="_blank">
                                         <img class="website-icon" src="images/icons/website.png" >
                                     </a>
                                 </div>
