--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta charset="utf-8">
     <title>WIN association</title>
 
+    <!-- google data-->
+    <meta property="title" content="WIN association">
+    <meta property="image" content="/images/banner.webp" />
+    <meta name="description" content="Skupnost ambicioznih mladih podjetnikov, usmerjenih v mreženje in osebni razvoj." />
+    <meta name="keywords" content="Poslovno združenje, podjetništvo za začetnike, mladi podjetniki, Dogodki za mreženje,Skupnost za poklicno rast,Mreženje za podjetnike.">
+
     <!-- meta -->
     <meta property="og:title" content="WIN association" />
     <meta property="og:type" content="website" />
