--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- google -->
     <meta property="og:title" content="WIN association">
     <meta property="og:description"
-        content="The WIN Association is a community of ambitious young entrepreneurs focused on networking and personal development. ">
+        content="Skupnost ambicioznih mladih podjetnikov, usmerjenih v mreženje in osebni razvoj.">
     <meta property="og:image" content="/images/banner.webp" />
     <meta property="og:image:secure_url" content="https://win-association.com/" />
     <meta property="og:image:type" content="image/jpeg" />
