--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
         <div class="container-3"></div>
     </div>
 
-    <div class="container d-flex" style="justify-content: center;">
+    <div class="container d-flex" style="justify-content: center;margin-left: auto;margin-right: auto;">
         <div class="row">
             <a id="prijava-button" target="_blank"
                 href="https://docs.google.com/forms/d/e/1FAIpQLSf_oV8CD4x29Jq1aMklsG_rAkcqUnFKXB770ytQ94KtJUS1kQ/viewform?usp=sf_link"
