spell check update

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             Mastermind
                         </h2>
                         <ul>
-                            <li class="paragraph-47">Obkroži se z kvalitetnimi ljudmi</li>
+                            <li class="paragraph-47">Obkroži se s kakovostnimi ljudmi</li>
                             <li class="paragraph-47">Iz meseca v mesec rasti</li>
                             <li class="paragraph-47">Lažje opravi zadane cilje</li>
                             <li class="paragraph-47">Brainstormaj svoje težave z ostalimi podjetniki </li>
@@ -255,7 +255,7 @@
                         <h2 class="h2-2"> Srečanja z gosti </h2>
                         <ul>
                             <li class="paragraph-47">Spoznaj uspešne podjetnike</li>
-                            <li class="paragraph-47">Uči se iz njhovih napak in zmag</li>
+                            <li class="paragraph-47">Uči se iz njihovih napak in zmag</li> 
                             <li class="paragraph-47">Vprašaj jih za nasvete</li>
                             <li class="paragraph-47">Razširi svoj network</li>
                         </ul>
@@ -273,7 +273,7 @@
                         <ul>
                             <li class="paragraph-47">Dostop do mladih aktivnih posameznikov iz več kot 20 različnih
                                 področij.</li>
-                            <li class="paragraph-47">Dostop do privatnih networking dogodov</li>
+                            <li class="paragraph-47">Dostop do zasebnih networking dogodov</li>
                         </ul>
                     </div>
                     <div class="centre_block-3 _3">
@@ -463,8 +463,7 @@
                                     <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
                                         class="paragraph-37">Na srečanjih z uspešnimi podjetniki imajo naši člani
                                         možnost pridobivanja znanja iz prve roke. Srečanja so interaktivna in
-                                        komunikacija poteka v obe smeri. Cilj teh srečanj je da gosti spoznajo člane in
-                                        ne le obratno.</p>
+                                        komunikacija poteka v obe smeri. Cilj teh srečanj je, da gosti spoznajo člane in ne le obratno.</p>
                                     <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
                                         class="d-none paragraph-37">Članstvo v združenju WIN prinaša mesečna predavanja
                                         uspešnih podjetnikov. Na teh srečanjih ugledni poslovneži delijo svoje zgodbe o
@@ -495,10 +494,9 @@
                                         <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png"
                                             loading="lazy" alt="" class="image-51">
                                     </div>
-                                    <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
-                                        class="paragraph-37">Za naše člane najmanj 2x letno organiziramo obisk znanega
-                                        podjetja, kjer si od blizu pogledamo kako uspešni podjetniki vodijo in gradijo
-                                        svoja podjetja.</p>
+                                    <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37">
+                                        Za svoje člane najmanj 2x letno organiziramo obisk znanega podjetja, kjer si od blizu pogledamo, kako uspešni podjetniki vodijo in gradijo njihova podjetja.
+                                    </p>
                                     <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
                                         class="d-none paragraph-37">Za člane združenja WIN so organizirani obiski
                                         podjetij, kjer lahko iz prve roke opazujejo poslovne procese in se učijo od
@@ -582,8 +580,8 @@
                                     </div>
                                     <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
                                         class="paragraph-37">Ko postaneš WIN član dobiš dostop do več kot 50 ur
-                                        posnetkov iz predavanj z gosti. Na teh posnetkih lahko najdeš ogromno goldden
-                                        nuggetov, ki so nam jih zaupali gosti na privatnih srečanjih.</p>
+                                        posnetkov iz predavanj z gosti. Na teh posnetkih lahko najdeš ogromno goldden nuggetov, ki so nam jih zaupali gosti na zasebnih srečanjih.
+                                    </p>
                                 </div>
                             </div>
                             <img src="/images/package/video-arhiv.webp" loading="lazy" style="opacity:0" width="1000"
@@ -606,10 +604,9 @@
                                         <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png"
                                             loading="lazy" alt="" class="image-51">
                                     </div>
-                                    <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
-                                        class="paragraph-37">V zaprtem discord kanalu člani izmenjujejo vse od aktualnih
-                                        informacij, relavantnih knjig/dogodkov, pa do priložnosti za zaposlitev. Imamo
-                                        tudi poseben #channel kjer naši člani objavijo ko rabijo pomoč ali nasvet</p>
+                                    <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37">
+                                        V zaprtem Discordovem kanalu člani izmenjujejo vse od aktualnih informacij, relevantnih knjig/dogodkov, pa do priložnosti za zaposlitev. Imamo tudi poseben #channel, kjer naši člani objavijo, ko potrebujejo pomoč ali nasvet.
+                                    </p>
                                     <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
                                         class="d-none paragraph-37">Discord skupnost, kjer člani izmenjujejo vse od
                                         poslovnih priložnosti, literarnih priporočil, do najav dogodkov v Ljubljani. Je
